Minimal refactoring of KissenPlayerClient